kuber/mock-soap.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-soap
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: mock-soap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-soap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-soap
  template:
    metadata:
      labels:
        app: mock-soap
    spec:
      containers:
      - name: mock-soap
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
