kuber/solicitud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solicitud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solicitud-service
  template:
    metadata:
      labels:
        app: solicitud-service
    spec:
      containers:
      - name: solicitud-service
        image: solicitud-service:latest
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: solicitud-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: solicitud-service
