kuber/destinationrule-soap.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: soap-cb
spec:
  host: mock-soap.default.svc.cluster.local 
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 60s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
